Refactor TestAnalyzer to report test result using new type 'TestOperationResult'
